grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/grafana
            - name: provisioning-datasource
              mountPath: /etc/grafana/provisioning/datasources
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 150m
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: grafana-storage
        - name: provisioning-datasource
          configMap:
            name: grafana-datasource
